@@ -5,10 +5,11 @@ serd (0.21.1) unstable;
   * Add serd_reader_set_strict() and -l (lax) option to serdi to tolerate
     parsing URIs with escaped characters
   * Fix reading statements ending with a blank then dot with no space
+  * Add support for Turtle named inline nodes extension
   * Report errors for invalid IRI characters and missing terminators
   * Fix warnings when building with ISO C++ compilers
 
- -- David Robillard <d@drobilla.net>  Tue, 16 Dec 2014 12:17:44 -0500
+ -- David Robillard <d@drobilla.net>  Wed, 17 Dec 2014 00:49:08 -0500
 
 serd (0.20.0) stable;
 
